// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compileContentModel manifest > SPEC-rich-text/AC-028 emits the manifest of the core profile stand-in 1`] = `
{
  "commands": [
    "paragraph.set",
    "text.insert",
    "hard-break.insert",
    "history.undo",
    "history.redo",
    "block.move.up",
    "block.move.down",
  ],
  "features": [
    {
      "id": "core",
      "options": {},
      "version": 1,
    },
  ],
  "keys": [
    {
      "command": "paragraph.set",
      "key": "mac:Mod-Alt-0",
      "payload": null,
    },
    {
      "command": "paragraph.set",
      "key": "other:Ctrl-Shift-0",
      "payload": null,
    },
    {
      "command": "history.undo",
      "key": "Mod-z",
      "payload": null,
    },
    {
      "command": "history.redo",
      "key": "Mod-Shift-z",
      "payload": null,
    },
    {
      "command": "history.redo",
      "key": "other:Ctrl-y",
      "payload": null,
    },
    {
      "command": "hard-break.insert",
      "key": "Shift-Enter",
      "payload": null,
    },
    {
      "command": "block.move.up",
      "key": "Mod-Alt-ArrowUp",
      "payload": null,
    },
    {
      "command": "block.move.down",
      "key": "Mod-Alt-ArrowDown",
      "payload": null,
    },
  ],
  "marks": [],
  "model": {
    "id": "test.model",
    "version": 1,
  },
  "nodes": [
    "doc",
    "paragraph",
    "text",
    "hard_break",
  ],
  "plugins": [
    "clipboard",
    "history",
    "keymap:core",
    "drop-cursor",
    "base-keys",
  ],
}
`;

exports[`compileContentModel manifest > SPEC-rich-text/AC-028 emits the manifest of the document profile stand-in 1`] = `
{
  "commands": [
    "paragraph.set",
    "text.insert",
    "hard-break.insert",
    "history.undo",
    "history.redo",
    "block.move.up",
    "block.move.down",
    "fixture.undo",
    "fixture.paragraph.set",
    "fixture.heading.set",
    "fixture.rule.insert",
  ],
  "features": [
    {
      "id": "core",
      "options": {},
      "version": 1,
    },
    {
      "id": "fixture.history",
      "options": {},
      "version": 1,
    },
    {
      "id": "fixture.bold",
      "options": {},
      "version": 1,
    },
    {
      "id": "fixture.italic",
      "options": {},
      "version": 1,
    },
    {
      "id": "fixture.link",
      "options": {},
      "version": 1,
    },
    {
      "id": "fixture.color",
      "options": {},
      "version": 1,
    },
    {
      "id": "fixture.heading",
      "options": {
        "defaultLevel": 3,
      },
      "version": 1,
    },
  ],
  "keys": [
    {
      "command": "paragraph.set",
      "key": "mac:Mod-Alt-0",
      "payload": null,
    },
    {
      "command": "paragraph.set",
      "key": "other:Ctrl-Shift-0",
      "payload": null,
    },
    {
      "command": "history.undo",
      "key": "Mod-z",
      "payload": null,
    },
    {
      "command": "history.redo",
      "key": "Mod-Shift-z",
      "payload": null,
    },
    {
      "command": "history.redo",
      "key": "other:Ctrl-y",
      "payload": null,
    },
    {
      "command": "hard-break.insert",
      "key": "Shift-Enter",
      "payload": null,
    },
    {
      "command": "block.move.up",
      "key": "Mod-Alt-ArrowUp",
      "payload": null,
    },
    {
      "command": "block.move.down",
      "key": "Mod-Alt-ArrowDown",
      "payload": null,
    },
    {
      "command": "fixture.undo",
      "key": "Mod-z",
      "payload": null,
    },
    {
      "command": "fixture.paragraph.set",
      "key": "Mod-b",
      "payload": null,
    },
    {
      "command": "fixture.heading.set",
      "key": "Mod-Alt-2",
      "payload": {
        "level": 2,
      },
    },
  ],
  "marks": [
    "link",
    "font_color",
    "bold",
    "italic",
  ],
  "model": {
    "id": "test.model",
    "version": 1,
  },
  "nodes": [
    "doc",
    "paragraph",
    "text",
    "hard_break",
    "heading",
    "rule",
  ],
  "plugins": [
    "clipboard",
    "history",
    "keymap:core",
    "keymap:fixture.history",
    "keymap:fixture.bold",
    "keymap:fixture.heading",
    "drop-cursor",
    "base-keys",
  ],
}
`;
